--- a/TamagoHomePage/Base.lproj/Main.storyboard
+++ b/TamagoHomePage/Base.lproj/Main.storyboard
@@ -108,7 +108,7 @@
                                                                     <rect key="frame" x="5" y="5" width="114" height="27"/>
                                                                     <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                                    <nil key="highlightedColor"/>
+                                                                    <color key="highlightedColor" red="0.38431372549999998" green="0.49019607840000001" blue="0.5568627451" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                                 </label>
                                                             </subviews>
                                                         </view>
