--- a/TamagoHomePage/Base.lproj/Main.storyboard
+++ b/TamagoHomePage/Base.lproj/Main.storyboard
@@ -351,6 +351,62 @@
             </objects>
             <point key="canvasLocation" x="1872.8" y="-199.25037481259372"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="1Qa-bd-P8i">
+            <objects>
+                <viewController id="kMz-cb-M88" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Ldo-8y-hS7">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4n7-43-oZR">
+                                <rect key="frame" x="87" y="20" width="200" height="32"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OVm-aH-UbK">
+                                        <rect key="frame" x="0.0" y="0.0" width="66.5" height="32"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PG7-Kb-iRX">
+                                        <rect key="frame" x="66.5" y="0.0" width="67" height="32"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="z8K-H3-hLu">
+                                        <rect key="frame" x="133.5" y="0.0" width="66.5" height="32"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    </view>
+                                </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="z8K-H3-hLu" firstAttribute="top" secondItem="4n7-43-oZR" secondAttribute="top" id="0Pe-p1-eLn"/>
+                                    <constraint firstAttribute="bottom" secondItem="z8K-H3-hLu" secondAttribute="bottom" id="2qx-jn-ZDm"/>
+                                    <constraint firstItem="OVm-aH-UbK" firstAttribute="width" secondItem="z8K-H3-hLu" secondAttribute="width" id="726-hV-WcO"/>
+                                    <constraint firstAttribute="trailing" secondItem="z8K-H3-hLu" secondAttribute="trailing" id="7Hr-cZ-KK8"/>
+                                    <constraint firstAttribute="height" constant="32" id="7te-Ji-baM"/>
+                                    <constraint firstItem="z8K-H3-hLu" firstAttribute="leading" secondItem="PG7-Kb-iRX" secondAttribute="trailing" id="8Fd-uH-Qsh"/>
+                                    <constraint firstItem="OVm-aH-UbK" firstAttribute="top" secondItem="4n7-43-oZR" secondAttribute="top" id="NFw-Ow-KhI"/>
+                                    <constraint firstItem="z8K-H3-hLu" firstAttribute="width" secondItem="PG7-Kb-iRX" secondAttribute="width" id="Znk-wG-aFF"/>
+                                    <constraint firstItem="OVm-aH-UbK" firstAttribute="leading" secondItem="4n7-43-oZR" secondAttribute="leading" id="ioA-HY-k2t"/>
+                                    <constraint firstAttribute="bottom" secondItem="OVm-aH-UbK" secondAttribute="bottom" id="kaA-YX-aO1"/>
+                                    <constraint firstAttribute="bottom" secondItem="PG7-Kb-iRX" secondAttribute="bottom" id="m8h-jB-fai"/>
+                                    <constraint firstItem="PG7-Kb-iRX" firstAttribute="top" secondItem="4n7-43-oZR" secondAttribute="top" id="mjG-FN-uKI"/>
+                                    <constraint firstAttribute="width" constant="200" id="o2s-n4-YZC"/>
+                                    <constraint firstItem="PG7-Kb-iRX" firstAttribute="centerX" secondItem="4n7-43-oZR" secondAttribute="centerX" id="pKX-SS-Cac"/>
+                                    <constraint firstItem="PG7-Kb-iRX" firstAttribute="leading" secondItem="OVm-aH-UbK" secondAttribute="trailing" id="sb2-PA-UNe"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="4n7-43-oZR" firstAttribute="centerX" secondItem="Ldo-8y-hS7" secondAttribute="centerX" id="04o-Qf-jCu"/>
+                            <constraint firstItem="4n7-43-oZR" firstAttribute="top" secondItem="StV-2g-4SN" secondAttribute="top" id="WY8-E8-6Rk"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="StV-2g-4SN"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Sfh-VT-2jd" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2645" y="100"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="nbG-rE-kzq">
             <objects>
